--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         });
           System.import('ytlive/ytlive.ts');
     </script>
+    <p>
+        sample from: https://github.com/sandermak/ytlive-angular2
+    </p>
 </head>
 <body>
 <yt-live>Loading yt</yt-live>
